Extract parsing and validation into utils New ParseUtil for request parameter parsing New ValidatorUtil for service-layer validation Removed duplicate parse/validate helpers from servlets/services Small refactoring